gccida/c1/next_insn_in_loop
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/next_insn_in_loop/src/loop.c:1044:4: error: expected ';' after expression
rtx result; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/next_insn_in_loop/src/loop.c:1044:5: error: use of undeclared identifier 'result'
rtx result; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/next_insn_in_loop/src/loop.c:1049:1: error: use of undeclared identifier 'result'
result = 0LL; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/next_insn_in_loop/src/loop.c:1052:8: error: use of undeclared identifier 'result'
return result; 
       ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/next_insn_in_loop/src/obj/loop.o] Error 1
